--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -9,7 +9,7 @@
     box-shadow: 2px 2px 10px rgba(158, 158, 158, 0.305);
 }
 
-.thead {
+.tHead {
     color: white;
     background-color: rgb(35, 218, 205);
     text-transform: uppercase;
@@ -17,10 +17,6 @@
 
 th {
     padding: 10px 0;
-}
-
-td {
-    border: 1px solid rgba(219, 219, 219, 0.411);
 }
 
 table {
@@ -44,16 +40,4 @@ table {
     width: 300px;
     padding: 10px 100px;
     text-align: center;
-}
-
-.tr {
-    height: 30px;
-}
-
-.tr:nth-child(even) {
-    background-color: rgba(219, 219, 219, 0.411);
-}
-
-.td {
-    box-shadow: 1px 1px 3px rgba(158, 158, 158, 0.305) inset;
 }
